# techtiribas-discord-bot

./: .env.example  .gitignore  README.md  assets_paths.json  commands.py  main.py  path_archives.json  pyproject.toml  requirements.txt  responses.py
db/: database_config.py
functions/cassino/: cassino.py
models/: transaction_history.py  user.py
src/: commands.py
src/commands/: admin_commands.py  commands.py  wallet_commands.py
src/commands/cassino/: evento_commands.py
src/exceptions/: bot_errors.py
src/functionalities/: assets.py  json_enviroments.py  log.py  messages.py
src/models/: bot_bank.py  evento.py  transaction_history.py  user.py  user_interactions.py  wallet.py
src/services/: bot_bank_service.py  evento_service.py  jobs_service.py  user_interactions_service.py  user_service.py  wallet_service.py
src/utils/: cron_expressions.py  log.py  messages.py
